--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -12,3 +12,11 @@ services:
         class: AppBundle\Form\RegistrationType
         tags:
             - { name: form.type, alias: appbundle_personne }
+
+    appbundle_twig.date.intl:
+        class: AppBundle\Services\TwigDateIntl
+#        arguments: ["@another_service_name", "plain_value", "%parameter_name%"]
+#        arguments: ["%%locale%%"]
+        public: false
+        tags:
+            - {name: twig.extension}
