--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -57,6 +57,19 @@ doctrine:
         auto_generate_proxy_classes: "%kernel.debug%"
         naming_strategy: doctrine.orm.naming_strategy.underscore
         auto_mapping: true
+        mappings:
+                    translatable:
+                        type: annotation
+                        alias: Gedmo
+                        prefix: Gedmo\Translatable\Entity
+                        # make sure vendor library location is correct
+                        dir: "%kernel.root_dir%/../vendor/gedmo/doctrine-extensions/lib/Gedmo/Translatable/Entity"
+
+stof_doctrine_extensions:
+    default_locale: fr_FR
+    orm:
+        default:
+            sortable: true
 
 # Swiftmailer Configuration
 swiftmailer:
