--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -20,3 +20,12 @@ services:
         public: false
         tags:
             - {name: twig.extension}
+
+
+
+    gedmo.listener.sortable:
+        class: Gedmo\Sortable\SortableListener
+        tags:
+            - { name: doctrine.event_subscriber, connection: default }
+        calls:
+            - [ setAnnotationReader, [ "@annotation_reader" ] ]
